@@ -1,11 +1,11 @@
-package Specio::Constraint::Union;
+package Specio::Constraint::Intersection;
 
 use strict;
 use warnings;
 
 our $VERSION = '0.23';
 
-use List::Util qw( all any );
+use List::Util qw( all );
 use Role::Tiny::With;
 use Specio::OO;
 use Storable qw( dclone );
@@ -57,7 +57,7 @@ sub _build_name {
     my $self = shift;
 
     return unless all { $_->_has_name } @{ $self->of };
-    return join q{ | }, map { $_->name } @{ $self->of };
+    return join q{ & }, map { $_->name } @{ $self->of };
 }
 
 ## no critic (Subroutines::ProhibitUnusedPrivateSubroutines)
@@ -78,7 +78,7 @@ sub _build_optimized_constraint {
     ## no critic (Subroutines::ProtectPrivateSubs)
     my @c = map { $_->_optimized_constraint } @{ $self->of };
     return sub {
-        return any { $_->( $_[0] ) } @c;
+        return all { $_->( $_[0] ) } @c;
     };
 }
 
@@ -94,7 +94,7 @@ sub _build_inline_generator {
 
     return sub {
         return '(' . (
-            join q{ || },
+            join q{ && },
             map { sprintf( '( %s )', $_->_inline_generator->( $_, $_[1] ) ) }
                 @{ $self->of }
         ) . ')';
@@ -119,7 +119,7 @@ __PACKAGE__->_ooify;
 
 1;
 
-# ABSTRACT: A class for union constraints
+# ABSTRACT: A class for intersection constraints
 
 __END__
 
@@ -131,27 +131,28 @@ __END__
 
 =head1 DESCRIPTION
 
-This is a specialized type constraint class for unions, which will allow a
-value which matches any one of several distinct types.
+This is a specialized type constraint class for intersections, which will
+allow a value which matches each one of several distinct types.
 
 =head1 API
 
 This class provides all of the same methods as L<Specio::Constraint::Simple>,
 with a few differences:
 
-=head2 Specio::Constraint::Union->new( ... )
+=head2 Specio::Constraint::Intersection->new( ... )
 
 The C<parent> parameter is ignored if it passed, as it is always C<undef>
 
 The C<inline_generator> and C<constraint> parameters are also ignored. This
 class provides its own default inline generator subroutine reference.
 
-Finally, this class requires an additional parameter, C<of>. This must be a
-an arrayref of type objects.
+Finally, this class requires an additional parameter, C<of>. This must be an
+arrayref of type objects.
 
-=head2 $enum->of
+=head2 $union->of
 
-Returns an array reference of the individual types which makes up this union.
+Returns an array reference of the individual types which makes up this
+intersection.
 
 =head1 ROLES
 
