@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Added intersection types.
+
+
 0.22     2016-06-18
 
 - Require version 0.83. I know 0.77 doesn't work but I'm not sure exactly
